@@ -1,0 +1,10 @@
+<?php
+
+namespace Tests;
+
+use Tests\Traits\ApiSignIn;
+
+class ApiTestCase extends TestCase
+{
+    use ApiSignIn;
+}
