@@ -2,14 +2,15 @@
 
 namespace Tests\Unit;
 
+use App\Tag;
 use App\Call;
 use App\Debt;
 use App\Contact;
-use Tests\TestCase;
 use App\SpecialDate;
+use Tests\FeatureTestCase;
 use Illuminate\Foundation\Testing\DatabaseTransactions;
 
-class ContactTest extends TestCase
+class ContactTest extends FeatureTestCase
 {
     use DatabaseTransactions;
 
@@ -647,6 +648,115 @@ class ContactTest extends TestCase
                 'last_name' => 'Doe',
                 'middle_name' => 'Jr',
             ]
+        );
+    }
+
+    public function test_it_creates_a_tag_and_sets_it_to_a_contact()
+    {
+        $user = $this->signIn();
+
+        $contact = factory(Contact::class)->create(['account_id' => $user->account->id]);
+        $tag = $contact->setTag('friend');
+
+        $this->assertDatabaseHas(
+            'tags',
+            [
+                'name' => 'friend',
+            ]
+        );
+
+        $this->assertDatabaseHas(
+            'contact_tag',
+            [
+                'tag_id' => $tag->id,
+                'contact_id' => $contact->id,
+            ]
+        );
+    }
+
+    public function test_it_uses_an_existing_tag_to_associate_it_with_the_contact()
+    {
+        $user = $this->signIn();
+
+        $contact = factory(Contact::class)->create(['account_id' => $user->account->id]);
+        $tag = factory(Tag::class)->create([
+            'account_id' => $user->account->id,
+            'name' => 'friend',
+        ]);
+
+        $newTag = $contact->setTag('friend');
+
+        $this->assertEquals(
+            $tag->id,
+            $newTag->id
+        );
+    }
+
+    public function test_it_unsets_all_the_tags()
+    {
+        $user = $this->signIn();
+
+        $contact = factory(Contact::class)->create(['account_id' => $user->account->id]);
+        $tag1 = $contact->setTag('friend');
+        $tag2 = $contact->setTag('family');
+        $tag3 = $contact->setTag('world');
+
+        $this->assertDatabaseHas(
+            'contact_tag',
+            [
+                'tag_id' => $tag3->id,
+                'contact_id' => $contact->id,
+            ]
+        );
+
+        $this->assertEquals(
+            3,
+            $contact->tags()->count()
+        );
+
+        $contact->unsetTags();
+
+        $this->assertDatabaseMissing(
+            'contact_tag',
+            [
+                'tag_id' => $tag3->id,
+                'contact_id' => $contact->id,
+            ]
+        );
+
+        $this->assertEquals(
+            0,
+            $contact->tags()->count()
+        );
+    }
+
+    public function it_unsets_a_particular_tag()
+    {
+        $user = $this->signIn();
+
+        $contact = factory(Contact::class)->create(['account_id' => $user->account->id]);
+        $tag1 = $contact->setTag('friend');
+        $tag2 = $contact->setTag('family');
+        $tag3 = $contact->setTag('world');
+
+        $this->assertEquals(
+            3,
+            $contact->tags()->count()
+        );
+
+        $contact->unsetTag($tag3->id);
+
+        $this->assertDatabaseMissing(
+            'contact_tag',
+            [
+                'tag_id' => $tag3->id,
+                'contact_id' => $contact->id,
+            ]
+        );
+
+        $this->assertEquals(
+            2,
+            $contact->tags()->count()
         );
     }
 }
